# bignumbers

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  annotated.html  annotated_dup.js  bdig.hpp  bdig_8hpp_source.html  classes.html  classsag_1_1bdig-members.html  classsag_1_1bdig.html  classsag_1_1bdig.js  classsag_1_1bdig_1_1buffer-members.html  classsag_1_1bdig_1_1buffer.html  classsag_1_1bdig_1_1buffer.js  classsag_1_1bdig_1_1buffer__coll__graph.map  classsag_1_1bdig_1_1buffer__coll__graph.md5  classsag_1_1bdig__coll__graph.map  classsag_1_1bdig__coll__graph.md5  classsag_1_1bdig_a00314be2c4cb2a95971c0a49266b80d0_cgraph.map  classsag_1_1bdig_a00314be2c4cb2a95971c0a49266b80d0_cgraph.md5  classsag_1_1bdig_a0940f8ffe8ceb9c21b5f790f4f4e3d73_cgraph.map  classsag_1_1bdig_a0940f8ffe8ceb9c21b5f790f4f4e3d73_cgraph.md5  classsag_1_1bdig_a0c7c4c55552c1166854e5efe56c68a14_cgraph.map  classsag_1_1bdig_a0c7c4c55552c1166854e5efe56c68a14_cgraph.md5  classsag_1_1bdig_a0d109f61ed7c043e8df2ec31de3d096a_cgraph.map  classsag_1_1bdig_a0d109f61ed7c043e8df2ec31de3d096a_cgraph.md5  classsag_1_1bdig_a0d109f61ed7c043e8df2ec31de3d096a_icgraph.map  classsag_1_1bdig_a0d109f61ed7c043e8df2ec31de3d096a_icgraph.md5  classsag_1_1bdig_a146fbe05f63a6bf04887b6f1238713d9_cgraph.map  classsag_1_1bdig_a146fbe05f63a6bf04887b6f1238713d9_cgraph.md5  classsag_1_1bdig_a231282308e71d5019c0c5a06c056ac0e_cgraph.map  classsag_1_1bdig_a231282308e71d5019c0c5a06c056ac0e_cgraph.md5  classsag_1_1bdig_a231282308e71d5019c0c5a06c056ac0e_icgraph.map  classsag_1_1bdig_a231282308e71d5019c0c5a06c056ac0e_icgraph.md5  classsag_1_1bdig_a285058aa231fa27e21bad1b92f2df422_cgraph.map  classsag_1_1bdig_a285058aa231fa27e21bad1b92f2df422_cgraph.md5  classsag_1_1bdig_a285058aa231fa27e21bad1b92f2df422_icgraph.map  classsag_1_1bdig_a285058aa231fa27e21bad1b92f2df422_icgraph.md5  (+208 more)
.github/workflows/: build.yml  cmake.yml  codeql.yml  coverage.yml
samples/: CMakeLists.txt  add_sub.cpp  calc_prime_num.cpp  mul_div  mul_div.cpp
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
tests/: CMakeLists.txt  bdig_comparison_test.cpp  bdig_tests.cpp
